some english pages

--- a/loop/contact_EN.html
+++ b/loop/contact_EN.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>关于我们</title>
+		<title>About Us</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/footer.css">
@@ -21,10 +21,10 @@
 				width: 250px;
 			}
 			.indexBox{
-				height: 800px;
+				height: 1000px;
 			}
 			.contentBox{
-				height: 800px;
+				height: 1000px;
 			}
 			.logoBox{
 				align-content: center;
@@ -40,10 +40,10 @@
 				<div class="col-2 box logoBox">
 					<div class="dropdown" style="margin-top:20px;margin-left:55px;">
 					  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					    切换语言
+					    Language
 					  </button>
 					  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					    <a class="dropdown-item" href="contact.html">中文</a>
+					    <a class="dropdown-item" href="contact.html">Chinese</a>
 					    <a class="dropdown-item" href="index_EN.html">English</a>
 					  </div>
 					</div>
@@ -52,7 +52,7 @@
 			<div class="row">
 				<div class="col-12 box navBox">
 					<nav class="navbar navbar-expand-lg navbar-default">
-					  <a class="navbar-brand" href="index_v3.html" style="color:#d40045;font-weight:bold;margin-left:-30px;">美中新视角基金会</a>
+					  <a class="navbar-brand" href="index_v3.html" style="color:#d40045;font-weight:bold;margin-left:-30px;">The U.S. China Perspectives Foundation</a>
 					  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					    <span class="navbar-toggler-icon"></span>
 					  </button>
@@ -60,7 +60,7 @@
 					  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 					    <ul class="navbar-nav mr-auto nav-pills">
 					      <li class="nav-item">
-					        <a class="nav-link" href="index_v3.html">首页 <span class="sr-only">(current)</span></a>
+					        <a class="nav-link" href="index_v3.html">Home <span class="sr-only">(current)</span></a>
 					      </li>
 					      <li class="nav-item dropdown">
 					        <a class="nav-link dropdown-toggle" href="allProjects.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -73,21 +73,21 @@
 					        </div>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="magazine.html">新视角杂志</a>
+					        <a class="nav-link" href="magazine.html">Magazine</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="">运营项目</a>
+					        <a class="nav-link" href="">Programs</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="view.html">钝角网</a>
+					        <a class="nav-link" href="view.html">News</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link active" href="contact.html">关于我们</a>
+					        <a class="nav-link active" href="contact.html">About Us</a>
 					      </li>
 					    </ul>
 					    <form class="form-inline my-2 my-lg-0" style="margin-right:-30px;">
-					      <input class="form-control mr-sm-2" type="search" placeholder="输入内容" aria-label="Search">
-					      <button class="btn btn-primary my-2 my-sm-0" type="submit">搜索</button>
+					      <input class="form-control mr-sm-2" type="search" placeholder="Input" aria-label="Search">
+					      <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
 					    </form>
 					  </div>
 					</nav>
@@ -98,44 +98,53 @@
 				</div>
 				<div class="col-10 box contentBox">
 					<div class="content-div" style="margin-top:20px;">
-						<h5>关于我们</h5>
-						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">美中新视角基金会于2016年成立于美国洛杉矶，2018年将主要办公职能转移到首都华盛顿，同时在美国东西海岸拥有办公地点。
+						<h5>About Us</h5>
+						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">The U.S.-China New Perspectives Foundation was founded in Los Angeles in 2016. In 2018 most of its functions were transferred to Washington, D.C., and it is now represented by offices on both the East and West Coast of the United States.
 						</p>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">
-							基金会是由一群致力于提升和贡献中美关系的个人组建的。其使命是寻找两国能够合作的领域，正视和缓解两国的分歧，以各类政策性研究和会议，各类教育交流活动为主要形式，达到促进中美关系向更加融洽和信任的方向发展的目的。
+							The goal of the Foundation’s founders was to improve and contribute to China-U.S. relations. The Foundation’s mission is to identify areas in which the two countries can work together, to identify and resolve differences between China and the U.S., to conduct policy research and hold conferences, and, mainly through educational activities and discussions, to achieve the goal of moving China-U.S. relations in the direction of friendly cooperation and increased mutual trust.
 						</p>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">
-							基金会是一个被美国国税局批准的501c3非营利教育性机构。
+							The Foundation is a 501(c)(3) non-for-profit educational organization approved by the Internal Revenue Service.
 						</p>
 						<HR align=center width=1000 color=black SIZE=5>
-						<h5>联系我们</h5>
+						<h5>Contact Us</h5>
 						<p style="text-indent:2em; font-weight:bold;"><span style="font-size:15px;line-height:1.6em;">
-							美中新视角基金会美国联络处:
+							Washington DC Office:
 						</p>
 						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							地址：1743 22nd St NW, Washington, DC 20008
+							Address: 1743 22nd St NW, Washington, DC 20008
 						</p>
 						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							地址：2804 Gateway Oaks Dr Ste 200 Sacramento CA 95833
+							TEL: +1（626）656-3512
 						</p>
 						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							电话：+1（626）656-3512
+							E-mail: info@ucnpf.org, ucnpf@163.com
+						</p>
+						<p style="text-indent:2em; font-weight:bold;"><span style="font-size:15px;line-height:1.6em;">
+							California Office:
 						</p>
 						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							邮箱： info@ucnpf.org, ucnpf@163.com
+							Address: 2804 Gateway Oaks Dr Ste 200 Sacramento CA 95833
+						</p>
+						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
+							TEL: +1（626）656-3512
+						</p>
+						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
+							E-mail: info@ucnpf.org, ucnpf@163.com
 						</p>
 						<HR align=left width=55% color=black size=1>
 						<p style="text-indent:2em; font-weight:bold;"><span style="font-size:15px;line-height:1.6em;">
-							美中新视角基金会中国联络处:
+							Beijing Office:
 						</p>
 						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							地址：北京市朝阳区北苑路180号加利大厦1号楼A-501
+							Address: 501-A Jiali Building, No.180 Beiyuan Road, Chaoyang, Beijing 100101
 						</p>
 						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							电话： +86 010-64961765
+							TEL: +86 010-64961765
 						</p>
 						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							邮箱： info@ucnpf.org; ucnpf@163.com
+							E-mail: info@ucnpf.org; ucnpf@163.com
 						</p>
 					</div>
 				</div>
