--- a/loop/index_EN.html
+++ b/loop/index_EN.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>美中新视角基金会</title>
+		<title>The U.S. China Perspectives Foundation</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/footer.css">
 		<link rel="stylesheet" href="css/skeleton.css">
 		<link rel="stylesheet" href="css/index.css">
-		
 	</head>
 	<body>
 		<div class="container">
@@ -18,20 +17,19 @@
 				<div class="col-2 box logoBox">
 					<div class="dropdown" style="margin-top:20px;margin-left:55px;">
 					  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					    切换语言
+					    Language 
 					  </button>
 					  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					    <a class="dropdown-item" href="">中文</a>
+					    <a class="dropdown-item" href="index_v3.html">Chinese</a>
 					    <a class="dropdown-item" href="index_EN.html">English</a>
 					  </div>
 					</div>
 				</div>
 			</div>
-
 			<div class="row">
 				<div class="col-12 box navBox">
 					<nav class="navbar navbar-expand-lg navbar-default">
-					  <a class="navbar-brand" href="index_v3.html" style="color:#d40045;font-weight:bold;margin-left:-30px;">美中新视角基金会</a>
+					  <a class="navbar-brand" href="index_v3.html" style="color:#d40045;font-weight:bold;margin-left:-30px;">The U.S. China Perspectives Foundation</a>
 					  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					    <span class="navbar-toggler-icon"></span>
 					  </button>
@@ -39,7 +37,7 @@
 					  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 					    <ul class="navbar-nav mr-auto nav-pills">
 					      <li class="nav-item">
-					        <a class="nav-link active" href="index_v3.html">首页 <span class="sr-only">(current)</span></a>
+					        <a class="nav-link active" href="index_EN.html">Home <span class="sr-only">(current)</span></a>
 					      </li>
 					      <li class="nav-item dropdown">
 					        <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -52,21 +50,21 @@
 					        </div>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="magazine.html">新视角杂志</a>
+					        <a class="nav-link" href="magazine_EN.html">Magazine</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="">运营项目</a>
+					        <a class="nav-link" href="">Programs</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="view.html">钝角网</a>
+					        <a class="nav-link" href="view.html">News</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="contact.html">关于我们</a>
+					        <a class="nav-link" href="contact_EN.html">About us</a>
 					      </li>
 					    </ul>
 					    <form class="form-inline my-2 my-lg-0" style="margin-right:-30px;">
 					      <input class="form-control mr-sm-2" type="search" placeholder="输入内容" aria-label="Search">
-					      <button class="btn btn-primary my-2 my-sm-0" type="submit">搜索</button>
+					      <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
 					    </form>
 					  </div>
 					</nav>
@@ -90,7 +88,7 @@
 						      </a>
 						      <div name="format-padding" style="height:85px"></div>
 						      <div class="carousel-caption d-none d-md-block">
-						    	<p>中日学者朝核问题对话</p>	
+						    	<p>Sino-Japan Dialogue: Nuclear Issue on Korean Peninsula</p>	
 						  	  </div>
 						    </div>
 						    <div class="carousel-item">
@@ -99,7 +97,7 @@
 						      </a>
 						      <div name="format-padding" style="height:85px"></div>
 						      <div class="carousel-caption d-none d-md-block">
-						    	<p>第三届中美国际反恐学术研讨会</p>
+						    	<p>Third Annual Sino-U.S. Counterterrorism Dialogue</p>
 						  	  </div>
 						    </div>
 						    <div class="carousel-item">
@@ -108,7 +106,7 @@
 						      </a>
 						      <div name="format-padding" style="height:85px"></div>
 						      <div class="carousel-caption d-none d-md-block">
-						    	<p>纪录片《旋风九日》在华盛顿展映</p>
+						    	<p>The screening of Documentary Mr.Deng Goes to Washington</p>
 						  	  </div>
 						    </div>
 						  </div>
@@ -234,28 +232,9 @@
 					
 				</div>
 			</div>
-
-			<div class="row">
-				<div class="col-9 footerBox">
-					<footer class="footer-div">
-						<a class="footer-link" id="copyRight-link" href="">版权声明 </a><b>|</b><a class="footer-link" id="contact-link" href="contact.html"> 联系方式</a>
-						<p style="margin-top:10px;">美中新视角基金会版权所有 Copyright &copy; The U.S.-China New Perspectives Foundation</p>
-						<p>电话TEL：+1（626）656-3512 (U.S.);</p> 
-						<p style="text-indent: 5em;">+86（10）6496-1765（中国)</p>
-					</footer>
-				</div>
-				<div class="col-3 QRcodeBox">
-					<div class="scan-links"> 
-          				<a class="forum-link" href="">
-          					<img class="scan-img" src="images/weixin.png" alt="微信公众号">
-          				</a>
-          				<p style="padding-top:20px;"> 微信公众号 </p>
-      				</div>
-				</div>
-			</div>
 		</div>
 	</body>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </html>
