--- a/loop/magazine_EN.html
+++ b/loop/magazine_EN.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>关于我们</title>
+		<title>The U.S. China Perspectives Foundation</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/footer.css">
@@ -14,12 +14,6 @@
 			.box{
 				border:5px solid rgba(0,0,0,0);
 			}
-			.logoBox{
-				align-content: center;
-			}
-			.logoImg{
-				width: 250px;
-			}
 			.indexBox{
 				height: 800px;
 			}
@@ -28,6 +22,9 @@
 			}
 			.logoBox{
 				align-content: center;
+			}
+			.logoImg{
+				width: 250px;
 			}
 		</style>
 	</head>
@@ -40,11 +37,11 @@
 				<div class="col-2 box logoBox">
 					<div class="dropdown" style="margin-top:20px;margin-left:55px;">
 					  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					    切换语言
+					    Language
 					  </button>
 					  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					    <a class="dropdown-item" href="contact.html">中文</a>
-					    <a class="dropdown-item" href="index_EN.html">English</a>
+					    <a class="dropdown-item" href="magazine.html">Chinese</a>
+					    <a class="dropdown-item" href="magazine_EN">English</a>
 					  </div>
 					</div>
 				</div>
@@ -52,7 +49,7 @@
 			<div class="row">
 				<div class="col-12 box navBox">
 					<nav class="navbar navbar-expand-lg navbar-default">
-					  <a class="navbar-brand" href="index_v3.html" style="color:#d40045;font-weight:bold;margin-left:-30px;">美中新视角基金会</a>
+					  <a class="navbar-brand" href="index_EN.html" style="color:#d40045;font-weight:bold;margin-left:-30px;">The U.S. China Perspectives Foundation</a>
 					  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					    <span class="navbar-toggler-icon"></span>
 					  </button>
@@ -60,7 +57,7 @@
 					  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 					    <ul class="navbar-nav mr-auto nav-pills">
 					      <li class="nav-item">
-					        <a class="nav-link" href="index_v3.html">首页 <span class="sr-only">(current)</span></a>
+					        <a class="nav-link" href="index_v3.html">Home <span class="sr-only">(current)</span></a>
 					      </li>
 					      <li class="nav-item dropdown">
 					        <a class="nav-link dropdown-toggle" href="allProjects.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -73,21 +70,21 @@
 					        </div>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="magazine.html">新视角杂志</a>
+					        <a class="nav-link active" href="magazine_EN.html">Magazine</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="">运营项目</a>
+					        <a class="nav-link" href="">Programs</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="view.html">钝角网</a>
+					        <a class="nav-link" href="view.html">News</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link active" href="contact.html">关于我们</a>
+					        <a class="nav-link" href="contact_EN.html">About Us</a>
 					      </li>
 					    </ul>
 					    <form class="form-inline my-2 my-lg-0" style="margin-right:-30px;">
-					      <input class="form-control mr-sm-2" type="search" placeholder="输入内容" aria-label="Search">
-					      <button class="btn btn-primary my-2 my-sm-0" type="submit">搜索</button>
+					      <input class="form-control mr-sm-2" type="search" placeholder="Input" aria-label="Search">
+					      <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
 					    </form>
 					  </div>
 					</nav>
@@ -98,44 +95,15 @@
 				</div>
 				<div class="col-10 box contentBox">
 					<div class="content-div" style="margin-top:20px;">
-						<h5>关于我们</h5>
-						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">美中新视角基金会于2016年成立于美国洛杉矶，2018年将主要办公职能转移到首都华盛顿，同时在美国东西海岸拥有办公地点。
+						<h5>New Perspectives Magazine</h5>
+						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">Founded in 2004, New Perspectives is published by the U.S.-China New Perspectives Foundation. It replaced the earlier magazine Leader and features in-depth analysis of China-U.S. relations, Asian-Pacific affairs, and other significant global events. With its meticulous analysis and fresh perspective on these issues, New Perspectives provides a lens for examining Sino-U.S. relations as well as today’s major global challenges.
 						</p>
-						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">
-							基金会是由一群致力于提升和贡献中美关系的个人组建的。其使命是寻找两国能够合作的领域，正视和缓解两国的分歧，以各类政策性研究和会议，各类教育交流活动为主要形式，达到促进中美关系向更加融洽和信任的方向发展的目的。
+						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">The magazine’s readership is mainly comprised of mainland Chinese scholars, high-level government officials (provincial department heads, directors of national government departments and higher, municipal government leaders), CEOs of large companies, heads of large private corporations, Directors-General of multinational corporations in the Greater China region, academicians from the Chinese Academy of Sciences and the Chinese Academy of Engineering, military command-level leaders and higher, high-level diplomats at foreign missions in China, as well as other individuals involved in Sino-U.S. relations and Pacific-Asian affairs.
 						</p>
-						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">
-							基金会是一个被美国国税局批准的501c3非营利教育性机构。
+						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">New Perspectives is a magazine of the U.S.-China New Perspectives Foundation. The publisher, editor, and writers are top talent from various domains. The magazine is not available for sale to the general public and does not normally accept subscriptions.
 						</p>
-						<HR align=center width=1000 color=black SIZE=5>
-						<h5>联系我们</h5>
-						<p style="text-indent:2em; font-weight:bold;"><span style="font-size:15px;line-height:1.6em;">
-							美中新视角基金会美国联络处:
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							地址：1743 22nd St NW, Washington, DC 20008
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							地址：2804 Gateway Oaks Dr Ste 200 Sacramento CA 95833
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							电话：+1（626）656-3512
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							邮箱： info@ucnpf.org, ucnpf@163.com
-						</p>
-						<HR align=left width=55% color=black size=1>
-						<p style="text-indent:2em; font-weight:bold;"><span style="font-size:15px;line-height:1.6em;">
-							美中新视角基金会中国联络处:
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							地址：北京市朝阳区北苑路180号加利大厦1号楼A-501
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							电话： +86 010-64961765
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							邮箱： info@ucnpf.org; ucnpf@163.com
+						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">
+						Read the magazine, please click<a href="http://www.dunjiaodu.com/gonggao/2017-12-27/2325.html" style="font-size:15px;font-family:Georgia;">http://www.dunjiaodu.com/gonggao/2017-12-27/2325.html</a>
 						</p>
 					</div>
 				</div>
