--- a/loop/magazine.html
+++ b/loop/magazine.html
@@ -40,8 +40,8 @@
 					    切换语言
 					  </button>
 					  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					    <a class="dropdown-item" href="#">中文</a>
-					    <a class="dropdown-item" href="#">English</a>
+					    <a class="dropdown-item" href="magazine.html">中文</a>
+					    <a class="dropdown-item" href="magazine_EN.html">English</a>
 					  </div>
 					</div>
 				</div>
@@ -57,7 +57,7 @@
 					  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 					    <ul class="navbar-nav mr-auto nav-pills">
 					      <li class="nav-item">
-					        <a class="nav-link" href="index_v3.html">首页 <span class="sr-only">(current)</span></a>
+					        <a class="nav-link" href="index_EN.html">首页 <span class="sr-only">(current)</span></a>
 					      </li>
 					      <li class="nav-item dropdown">
 					        <a class="nav-link dropdown-toggle" href="allProjects.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -131,4 +131,7 @@
 			</div>
 		</div>
 	</body>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </html>
