--- a/loop/index_v3.html
+++ b/loop/index_v3.html
@@ -56,11 +56,9 @@
 	<body>
 		<div class="container">
 			<div class="row">
-				<!-- <div class="col-10 box" id="logoDiv">
+				<div class="col-10 box" id="logoDiv">
 					<img src="images/shared/logo.png" class="rounded d-block logoImg" style="margin-left:-20px;">
-<<<<<<< HEAD
-				</div> -->
-=======
+				</div> 
 				</div>
 				<div class="col-2 box logoBox">
 					<div class="dropdown" style="margin-top:20px;margin-left:55px;">
@@ -73,7 +71,6 @@
 					  </div>
 					</div>
 				</div>
->>>>>>> 30d896e3cf630435f2b9b5ba235ac023f967f1a1
 			</div>
 
 			<div class="row">
