--- a/loop/skeleton_v4.html
+++ b/loop/skeleton_v4.html
@@ -16,27 +16,27 @@
 				<div class="w-20">
 					<img src="images/newLogo.png" id="logoImg" />
 				</div>
-				<div class="w-10 ml-1">
-					<button type="button" class="btn btn-secondary navBtn">首页</button>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">首页</a></button>
 				</div>
-				<div class="w-10 ml-1">
-					<button type="button" class="btn btn-secondary navBtn">运营项目</button>
+				<div class="w-10">	
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">项目</a></button>
 				</div>
-				<div class="w-10 ml-1">
-					<button type="button" class="btn btn-secondary navBtn">新视角杂志</button>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">新视角杂志</a></button>
 				</div>
-				<div class="w-10 ml-1">
-					<button type="button" class="btn btn-secondary navBtn">钝角网</button>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">钝角网</a></button>
 				</div>
-				<div class="w-10 ml-1">
-					<button type="button" class="btn btn-secondary navBtn">关于我们</button>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">关于我们</a></button>
 				</div>
-				<div class="w-10 ml-1">
-					<button type="button" class="btn btn-secondary navBtn">联系我们</button>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">联系我们</a></button>
 				</div>
-				<div class="w-10 ml-1">
-					<div class="dropdown language">
-					  <button class="btn btn-secondary dropdown-toggle navBtn dropdown-bg" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<div class="w-10">
+					<div class="dropdown">
+					  <button class="btn btn-secondary dropdown-toggle navBtn dropdown-bg language" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
 					    Language
 					  </button>
 					  <div class="dropdown-menu dropdown-bg" aria-labelledby="dropdownMenuButton">
@@ -49,14 +49,15 @@
 
 
 			
-
-			
+			<hr>
 			<div class="row footer">
 				<div class="col-9 ml-auto mr-auto footer-center">
-					<p class="text-left">
+					<p class="text-center">
+						2804 Gateway Oaks Dr Ste 200, Sacramento CA 95833
+					</p>
+					<p class="text-center">
 						Copyright &copy; 2018 The U.S.-China New Perspectives Foundation. All rights reserved.
 					</p>
-					<p>电话：+1 (626) 656-3512(美国) <b> | </b> +86 (10) 6496-1765(中国)</p>
 				</div>
 			</div>
 		</div>
