--- a/loop/index_v3.html
+++ b/loop/index_v3.html
@@ -6,61 +6,57 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/footer.css">
 		<link rel="stylesheet" href="css/skeleton.css">
-		<!-- <link rel="stylesheet" href="css/index.css"> -->
+		<link rel="stylesheet" href="css/index.css">
 		<style type="text/css">
 			.main-news{
-	/*background-color: #dbdde0;*/
-	height: 800px;
-}
-.programs{
-	/*background-color: grey;*/
-	border-left-width: 15px;
-	height: 800px;
-}
-.programContent{
-	overflow-y: scroll;
-	height: 725px;
-}
-.titleDiv{
-	/*background-color: green;*/
-}
-.breadcrumb{
-	height: 30px;
-	line-height: 9px;
-}
-.card-text{
-	line-height: 20px;
-}
+			/*background-color: #dbdde0;*/
+			height: 800px;
+		}
+		.programs{
+			/*background-color: grey;*/
+			border-left-width: 15px;
+			height: 800px;
+		}
+		.programContent{
+			overflow-y: scroll;
+			height: 725px;
+		}
+		.titleDiv{
+			/*background-color: green;*/
+		}
+		.breadcrumb{
+			height: 30px;
+			line-height: 9px;
+		}
+		.card-text{
+			line-height: 20px;
+		}
 
-.rolling-news{
-	/*border: 2px solid red;*/
-	border-bottom-width: 20px;
-	border-bottom-color: rgba(0,0,0,0);
-	border-bottom-style: solid;
-	background-color: rgba(5,93,135,1);
-	height: 400px;
-}
-.event-view{
-	/*background-color: brown;*/
-	height: 300px;
-}
-.event{
-	/*background-color: #949217;*/
-}
-.view{
-	/*background-color: #f1d3a1;*/
-}
+		.rolling-news{
+			/*border: 2px solid red;*/
+			border-bottom-width: 20px;
+			border-bottom-color: rgba(0,0,0,0);
+			border-bottom-style: solid;
+			background-color: rgba(5,93,135,1);
+			height: 400px;
+		}
+		.event-view{
+			/*background-color: brown;*/
+			height: 300px;
+		}
+		.event{
+			/*background-color: #949217;*/
+		}
+		.view{
+			/*background-color: #f1d3a1;*/
+		}
 		</style>
-		
 	</head>
 	<body>
 		<div class="container">
 			<div class="row">
-				<!-- <div class="col-10 box" id="logoDiv">
+				<div class="col-10 box" id="logoDiv">
 					<img src="images/shared/logo.png" class="rounded d-block logoImg" style="margin-left:-20px;">
-<<<<<<< HEAD
-				</div> -->
-=======
 				</div>
 				<div class="col-2 box logoBox">
 					<div class="dropdown" style="margin-top:20px;margin-left:55px;">
@@ -73,9 +69,7 @@
 					  </div>
 					</div>
 				</div>
->>>>>>> 30d896e3cf630435f2b9b5ba235ac023f967f1a1
 			</div>
-
 			<div class="row">
 				<div class="col-12 box navBox">
 					<nav class="navbar navbar-expand-lg navbar-default">
