--- a/loop/index_v4.html
+++ b/loop/index_v4.html
@@ -18,7 +18,7 @@
 					<img src="images/newLogo.png" id="logoImg" />
 				</div>
 				<div class="w-10 ml-1">
-					<button type="button" class="btn btn-secondary navBtn">首页</button>
+					<a href="index_v3.html"><button type="button" class="btn btn-secondary navBtn">首页</button></a>
 				</div>
 				<div class="w-10 ml-1">	
 					<button type="button" class="btn btn-secondary navBtn">项目</button>
