--- a/loop/view.html
+++ b/loop/view.html
@@ -103,18 +103,21 @@
 						    <li class="breadcrumb-item active" aria-current="page"><strong>钝角网新闻选</strong></li>
 						  </ol>
 						</nav>
-
 						<div class="row no-gutters mt-2">
-					            <div class="col-auto">
-					                <img src="images/zh-cn/view/2017-09-26/ad9b5355a0532482e1a837d00eea5fe6.jpg" style="width: 150px; height: 100px" class="img-fluid" alt="">
-					            </div>
-					            <div class="col">
-					                <div class="card-block px-2">
-					                    <a href="sitanjialong.html"><h6 class="card-title">斯坦加龙：“伊朗谈判”和“朝鲜交易”，特朗普在联合国大会演讲中的悖论</h6></a>
-					                    <p class="card-text" style="line-height:1.3em;">19日，特朗普总统在联合国大会上的发言第一次强调了国家主权在国际关系中需要发挥更大的作用。他还呼吁联合国解决来自朝鲜的迫在眉睫的威胁。虽然他强调的国家主权和国际合作的想法不一定相互矛盾，但两者之间却存在潜在的博弈关系...</p>
-					                </div>
-					            </div>
-					        </div>
+							<p class="card-text" style="line-height:1.3em; text-align: center;">浏览更多钝角网新闻请到: <a href="www.dunjiaodu.com">www.dunjiaodu.com</a></p>
+						</div>
+						</br>
+						<div class="row no-gutters mt-2">
+				            <div class="col-auto">
+				                <img src="images/zh-cn/view/2017-09-26/ad9b5355a0532482e1a837d00eea5fe6.jpg" style="width: 150px; height: 100px" class="img-fluid" alt="">
+				            </div>
+				            <div class="col">
+				                <div class="card-block px-2">
+				                    <a href="sitanjialong.html"><h6 class="card-title">斯坦加龙：“伊朗谈判”和“朝鲜交易”，特朗普在联合国大会演讲中的悖论</h6></a>
+				                    <p class="card-text" style="line-height:1.3em;">19日，特朗普总统在联合国大会上的发言第一次强调了国家主权在国际关系中需要发挥更大的作用。他还呼吁联合国解决来自朝鲜的迫在眉睫的威胁。虽然他强调的国家主权和国际合作的想法不一定相互矛盾，但两者之间却存在潜在的博弈关系...</p>
+				                </div>
+				            </div>
+				        </div>
 					    <HR align=center width=900 color=black SIZE=5>
 						<div class="row no-gutters mt-2">
 				            <div class="col-auto">
