--- a/loop/index_v4.html
+++ b/loop/index_v4.html
@@ -101,14 +101,83 @@
 					</div>
 
 					<div class="col-4 first-right">
-						<hr><hr><hr><hr>
+						<h5 class="right-title">&nbsp;&nbsp;项目</h5>
+					
+						<hr>
+						<div class="media">
+						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/IMG_4902.jpg" alt="Generic placeholder image">
+						  <div class="media-body">
+						    <h6 class="mt-0"><a href="#">中日学者对话：朝鲜半岛核问题研讨会</a></h6>
+						    <p class="prog-intro">美中新视角基金会和题本日本石川日中友好基金会在北京善缘联合举办中日学者对话活动</p>
+						  </div>
+						</div>
+
+						<hr>
+						<div class="media">
+						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/shizhang.jpg" alt="Generic placeholder image">
+						  <div class="media-body">
+						    <h6 class="mt-0"><a href="#">市长代表团</a></h6>
+						    <p class="prog-intro">美中新视角基金会和题本日本石川日中友好基金会在北京善缘联合举办中日学者对话活动</p>
+						  </div>
+						</div>
+						<hr>
+						<div class="media">
+						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/331c75f69e01cef4a2b67e310da5b27d.jpg" alt="Generic placeholder image">
+						  <div class="media-body">
+						    <h6 class="mt-0"><a href="#">旋风九日系列访美活动</a></h6>
+						    <p class="prog-intro">美中新视角基金会和题本日本石川日中友好基金会在北京善缘联合举办中日学者对话活动</p>
+						  </div>
+						</div>
+						<hr>
+						<div class="media">
+						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/fankong1.jpg" alt="Generic placeholder image">
+						  <div class="media-body">
+						    <h6 class="mt-0"><a href="#">中美反恐论坛</a></h6>
+						    <p class="prog-intro">美中新视角基金会和题本日本石川日中友好基金会在北京善缘联合举办中日学者对话活动</p>
+						  </div>
+						</div>
 					</div>
 				</div>
 			</div>
 
-
 			
-			<hr>
+
+			<hr class="fancy-hr">
+			<div class="row">
+				<div class="col-9 second-left">
+					<div class="row">
+						<div class="col-6 news-block">
+							<img src="images/indexThumbnails/wideThumbnails/af33d8dc873857b612abbdc9343a95e3.png" class="wide-thumbbnail mb-3">
+							<h5>中日学者交流项目</h5>
+							<p>2016年11月3-10日，中美新视角基金会和日本笹川日中友好基金联合举办中国学者赴日交流访问活动，由基金会创始人周志兴带队，邀请了上海复旦大学经济学教授韦森、上海华东师范大学历史教授许纪霖、武汉大学法学教授秦前红前往日本福冈、长崎、东京，</p>
+						</div>
+						<div class="col-6 news-block">
+							<img src="images/indexThumbnails/wideThumbnails/af33d8dc873857b612abbdc9343a95e3.png" class="wide-thumbbnail mb-3">
+							<h5>中日学者交流项目</h5>
+							<p>2016年11月3-10日，中美新视角基金会和日本笹川日中友好基金联合举办中国学者赴日交流访问活动，由基金会创始人周志兴带队，邀请了上海复旦大学经济学教授韦森、上海华东师范大学历史教授许纪霖、武汉大学法学教授秦前红前往日本福冈、长崎、东京，</p>
+						</div>
+						<div class="col-6 news-block">
+							<img src="images/indexThumbnails/wideThumbnails/af33d8dc873857b612abbdc9343a95e3.png" class="wide-thumbbnail mb-3">
+							<h5>中日学者交流项目</h5>
+							<p>2016年11月3-10日，中美新视角基金会和日本笹川日中友好基金联合举办中国学者赴日交流访问活动，由基金会创始人周志兴带队，邀请了上海复旦大学经济学教授韦森、上海华东师范大学历史教授许纪霖、武汉大学法学教授秦前红前往日本福冈、长崎、东京，</p>
+						</div>
+						<div class="col-6 news-block">
+							<img src="images/indexThumbnails/wideThumbnails/af33d8dc873857b612abbdc9343a95e3.png" class="wide-thumbbnail mb-3">
+							<h5>中日学者交流项目</h5>
+							<p>2016年11月3-10日，中美新视角基金会和日本笹川日中友好基金联合举办中国学者赴日交流访问活动，由基金会创始人周志兴带队，邀请了上海复旦大学经济学教授韦森、上海华东师范大学历史教授许纪霖、武汉大学法学教授秦前红前往日本福冈、长崎、东京，</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-3 second-right">
+					<h4>新闻视角</h4>
+					<hr>
+				</div>
+			</div>
+			
+
+
+			<hr class="fancy-hr">
 			<div class="row footer">
 				<div class="col-9 ml-auto mr-auto footer-center">
 					<p class="text-center">
