--- a/loop/index_v4.html
+++ b/loop/index_v4.html
@@ -146,22 +146,22 @@
 			<div class="row">
 				<div class="col-9 second-left">
 					<div class="row">
-						<div class="col-6 news-block">
+						<div class="col-6 prog-block">
 							<img src="images/indexThumbnails/wideThumbnails/af33d8dc873857b612abbdc9343a95e3.png" class="wide-thumbbnail mb-3">
 							<h5>中日学者交流项目</h5>
 							<p>2016年11月3-10日，中美新视角基金会和日本笹川日中友好基金联合举办中国学者赴日交流访问活动，由基金会创始人周志兴带队，邀请了上海复旦大学经济学教授韦森、上海华东师范大学历史教授许纪霖、武汉大学法学教授秦前红前往日本福冈、长崎、东京，</p>
 						</div>
-						<div class="col-6 news-block">
+						<div class="col-6 prog-block">
 							<img src="images/indexThumbnails/wideThumbnails/af33d8dc873857b612abbdc9343a95e3.png" class="wide-thumbbnail mb-3">
 							<h5>中日学者交流项目</h5>
 							<p>2016年11月3-10日，中美新视角基金会和日本笹川日中友好基金联合举办中国学者赴日交流访问活动，由基金会创始人周志兴带队，邀请了上海复旦大学经济学教授韦森、上海华东师范大学历史教授许纪霖、武汉大学法学教授秦前红前往日本福冈、长崎、东京，</p>
 						</div>
-						<div class="col-6 news-block">
+						<div class="col-6 prog-block">
 							<img src="images/indexThumbnails/wideThumbnails/af33d8dc873857b612abbdc9343a95e3.png" class="wide-thumbbnail mb-3">
 							<h5>中日学者交流项目</h5>
 							<p>2016年11月3-10日，中美新视角基金会和日本笹川日中友好基金联合举办中国学者赴日交流访问活动，由基金会创始人周志兴带队，邀请了上海复旦大学经济学教授韦森、上海华东师范大学历史教授许纪霖、武汉大学法学教授秦前红前往日本福冈、长崎、东京，</p>
 						</div>
-						<div class="col-6 news-block">
+						<div class="col-6 prog-block">
 							<img src="images/indexThumbnails/wideThumbnails/af33d8dc873857b612abbdc9343a95e3.png" class="wide-thumbbnail mb-3">
 							<h5>中日学者交流项目</h5>
 							<p>2016年11月3-10日，中美新视角基金会和日本笹川日中友好基金联合举办中国学者赴日交流访问活动，由基金会创始人周志兴带队，邀请了上海复旦大学经济学教授韦森、上海华东师范大学历史教授许纪霖、武汉大学法学教授秦前红前往日本福冈、长崎、东京，</p>
@@ -172,6 +172,29 @@
 				<div class="col-3 second-right">
 					<h4>新闻视角</h4>
 					<hr>
+					<a href="#">国家高端智库武汉大</a><br>
+					<div class="text-right">6-18-2018</div>
+					<hr>
+					<a href="#">国家高端智库武汉大</a><br>
+					<div class="text-right">6-18-2018</div>
+					<hr>
+					<a href="#">国家高端智库武汉大</a><br>
+					<div class="text-right">6-18-2018</div>
+					<hr>
+					<a href="#">国家高端智库武汉大</a><br>
+					<div class="text-right">6-18-2018</div>
+					<hr>
+					<a href="#">国家高端智库武汉大</a><br>
+					<div class="text-right">6-18-2018</div>
+
+					<hr class="dash-hr">
+
+					<img src="images/shared/pub2.jpg">
+					<p>美中新视角基金会于2016年成立于美国洛杉矶，2018年将主要办公职能转移到首都华盛顿，同时在美国东西海岸拥有办公地点。
+
+基金会是由一群致力于提升和贡献中美关系的个人组建的。其使命是寻找两国能够合作的领域，正视和缓解两国的分歧，以各类政策性研究和会议，各类教育交流活动为主要形式，达到促进中美关系向更加融洽和信任的方向发展的目的。
+
+基金会是一个被美国国税局批准的501c3非营利教育性机构。</p>
 				</div>
 			</div>
 			
