--- a/loop/index_v4.html
+++ b/loop/index_v4.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>美中新视角基金会</title>
 		<meta charset="UTF-8">
+		<link rel="icon" href="images/shared/favicon.png" type="image/png" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -61,11 +62,13 @@
 						  </ol>
 						  <div class="carousel-inner">
 						    <div class="carousel-item active">
-						      <img class="d-block w-100" src="images/guojifankong.jpg" alt="First slide">
-						      <div class="carousel-caption d-none d-md-block">
-							    <h5><strong>第三届中美国际反恐学术研讨会</strong></h5>
-							    <p>第三届中美国际反恐学术研讨会第三届中美国际反恐学术研讨会</p>
-							  </div>
+							  	<a href="">
+							      <img class="d-block w-100" src="images/guojifankong.jpg" alt="First slide">
+							      <div class="carousel-caption d-none d-md-block">
+								    <h5><strong>第三届中美国际反恐学术研讨会</strong></h5>
+								    <p>2016年7月24日 “第三届中美国际反恐学术研讨会”在北京杉园召开，中美双方退役高级将领、反恐专家及学者计40余人参加了本届研讨会...</p>
+								  </div>
+								</a>
 						    </div>
 						    <div class="carousel-item">
 						      <img class="d-block w-100" src="images/xuanfeng.jpg" alt="Second slide">
@@ -190,11 +193,7 @@
 					<hr class="dash-hr">
 
 					<img src="images/shared/pub2.jpg">
-					<p>美中新视角基金会于2016年成立于美国洛杉矶，2018年将主要办公职能转移到首都华盛顿，同时在美国东西海岸拥有办公地点。
-
-基金会是由一群致力于提升和贡献中美关系的个人组建的。其使命是寻找两国能够合作的领域，正视和缓解两国的分歧，以各类政策性研究和会议，各类教育交流活动为主要形式，达到促进中美关系向更加融洽和信任的方向发展的目的。
-
-基金会是一个被美国国税局批准的501c3非营利教育性机构。</p>
+					<p>美中新视角基金会于2016年成立于美国洛杉矶，2018年将主要办公职能转移到首都华盛顿，同时在美国东西海岸拥有办公地点。基金会是由一群致力于提升和贡献中美关系的个人组建的。其使命是寻找两国能够合作的领域，正视和缓解两国的分歧，以各类政策性研究和会议，各类教育交流活动为主要形式，达到促进中美关系向更加融洽和信任的方向发展的目的。基金会是一个被美国国税局批准的501c3非营利教育性机构。</p>
 				</div>
 			</div>
 			
